Fix spacing in information

--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ button {
 
 .box-wrapper,
 .topbox,
-.quote-wrapper {
+.quote-wrapper,
+.info-wrapper {
     display: flex;
     flex: 1 0 auto;
     width: 100vw;
@@ -64,7 +65,7 @@ button {
 }
 
 .topmost {
-    height: 350px;
+    height: 500px;
 }
 
 /*not there but closer*/
@@ -106,18 +107,28 @@ ul {
 .hero,
 .footer {
   display: flex;
-  color: white;
+  color: #f9f1f8;
 }
 
 .hero {
     justify-content: space-between;
     align-items: center;
+    margin-top: 75px;
+}
+
+.herodesc {
+    font-size: 18px;
 }
 
 .lefthero {
     gap: 16px;
     display: flex;
     flex-direction: column;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 700;
 }
 
 .herodesc {
@@ -132,18 +143,26 @@ ul {
 
 .hero .leaves {
     height: 200px;
-    width: 400px;
+    width: 500px;
 }
 /*adding these dimensions caused the information section to get shrunk down */
 
 .information {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.box-wrapper {
     text-align: center;
     flex: 1 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 25px;
-    height: 450px;
+    gap: 50px;
+    height: 500px;
 }
 
 .container {
@@ -163,7 +182,7 @@ ul {
 
 .quote-wrapper {
     background-color: #E5E7EB;
-    height: 350px;
+    height: 500px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
